<resources>
    <string name="app_name">AndroidDeviceTracking</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="network">Network</string>
    <string name="signalstrength">Signal strength</string>
    <string name="battery">Battery</string>
    <string name="memory">Memory</string>
    <string name="storage">Storage</string>
    <string name="altitude">Altitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="permissionrequestmessage">Need a permision.</string>
    <string name="gotit">Got it!</string>
    <string name="gpsspeed">GPS Speed</string>
    <string name="timezone">Timezone</string>
</resources>
